--- a/references.bib
+++ b/references.bib
@@ -216,7 +216,7 @@
 
 @Misc{		  bostock2022,
   author	= {Bostock, Mike},
-  title		= {{D3.js - Data-Driven Documents}},
+  title		= {D3.js - Data-Driven Documents},
   year		= {2022},
   month		= jul,
   note		= {[Online; accessed 18. Oct. 2022]},
@@ -1376,7 +1376,7 @@
 }
 
 @Misc{		  parlog2024,
-  author	= {{Nicolai Parlog}},
+  author	= {Parlog, Nicolai},
   title		= {Data Oriented Programming in Java 21},
   year		= {2024},
   month		= jan,
@@ -2012,10 +2012,32 @@
   publisher	= {Annual Reviews}
 }
 
+@misc{vaneerd2021,
+	author = {Van Eerd, Tony},
+	title = {Keynote: SOLID, Revisited},
+	journal = {CppNow},
+	year = {2021},
+	month = jul,
+	publisher = {Youtube},
+	note = {[Online; accessed 7. Nov. 2024]},
+	url = {https://www.youtube.com/watch?v=glYq-dvgby4}
+}
+
+@misc{vaneerd2023,
+	author = {Van Eerd, Tony},
+	title = {Value Oriented Programming Part 1: You Say You Want to Write a Function},
+	journal = {CppNow},
+	year = {2023},
+	month = sep,
+	publisher = {Youtube},
+	note = {[Online; accessed 7. Nov. 2024]},
+	url = {https://www.youtube.com/watch?v=b4p_tcLYDV0}
+}
+
 @Misc{		  vaneerd2024,
   author	= {Van Eerd, Tony},
   title		= {Value Oriented Programming Part V - Return of the Values},
-  journal	= {C++ Now},
+  journal	= {CppNow},
   year		= {2024},
   month		= jul,
   publisher	= {Youtube},
@@ -2367,3 +2389,76 @@
   year={2014}
 }
 
+@article{unwin1996,
+	author = {Unwin, Antony and Hawkins, George and Hofmann, Heike and Siegl, Bernd},
+	title = {{Interactive Graphics for Data Sets with Missing Values{\ifmmode---\else\textemdash\fi}MANET}},
+	journal = {J. Comput. Graph. Stat.},
+	year = {1996},
+	month = jun,
+	issn = {1047-4700},
+	publisher = {Taylor {\&} Francis Group},
+	url = {https://www.tandfonline.com/doi/abs/10.1080/10618600.1996.10474700}
+}
+
+@article{tierney2023,
+	author = {Tierney, Nicholas and Cook, Dianne},
+	title = {{Expanding Tidy Data Principles to Facilitate Missing Data Exploration, Visualization and Assessment of Imputations}},
+	journal = {J. Stat. Soft.},
+	volume = {105},
+	pages = {1--31},
+	year = {2023},
+	month = feb,
+	issn = {1548-7660},
+	doi = {10.18637/jss.v105.i07}
+}
+
+@misc{parent2015,
+	author = {Parent, Sean},
+	title = {Better Code: Data Structures},
+	journal = {CppCon},
+	year = {2015},
+	month = sep,
+	publisher = {Youtube},
+	note = {[Online; accessed 7. Nov. 2024]},
+	url = {https://www.youtube.com/watch?v=sWgDk-o-6ZE&list=PLM5v5JsFsgP21eB4z2mIL8upkvT00Tw9B&index=5}
+}
+
+@misc{parent2013,
+	author = {Parent, Sean},
+	title = {Inheritance Is The Base Class of Evil},
+	journal = {GoingNative},
+	year = {2013},
+	month = may,
+	publisher = {Youtube},
+	note = {[Online; accessed 7. Nov. 2024]},
+	url = {https://www.youtube.com/watch?v=2bLkxj6EVoM&list=PLM5v5JsFsgP21eB4z2mIL8upkvT00Tw9B}
+}
+
+@article{bouchet-valat2023,
+	author = {Bouchet-Valat, Milan and Kami{\ifmmode\acute{n}\else\'{n}\fi}ski, Bogumi{\l}},
+	title = {DataFrames.jl: Flexible and Fast Tabular Data in Julia},
+	journal = {Journal of Statistical Software},
+	volume = {107},
+	pages = {1--32},
+	year = {2023},
+	month = sep,
+	issn = {1548-7660},
+	doi = {10.18637/jss.v107.i04}
+}
+
+@Manual{muller2023,
+    title = {tibble: Simple Data Frames},
+    author = {Kirill Müller and Hadley Wickham},
+    year = {2023},
+    note = {R package version 3.2.1},
+    url = {https://CRAN.R-project.org/package=tibble},
+}
+
+@misc{polars2024,
+  author = {Polars Core Team},
+	title = {Index - Polars user guide},
+	year = {2024},
+	month = nov,
+	note = {[Online; accessed 8. Nov. 2024]},
+	url = {https://docs.pola.rs}
+}
